<resources>
    <string name="app_name">Gyan Utsav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_contactus">Contact Us</string>
    <string name="menu_program">Programs</string>
    <string name="donthaveaccountsignup">Don\'t have an account? Signup</string>
    <string name="big_text">Bhim Janmabhoomi is a memorial dedicated to Babasaheb Ambedkar, located at Mhow (now Dr. Ambedkar Nagar) in Madhya Pradesh, India. This was birthplace of Ambedkar, who was born on 14 April 1891 in Mhow.where the local government built this grand memorial. This memorial was inaugurated on Ambedkar s 100th birth anniversary – 14 April 1991 by the then Chief Minister of Madhya Pradesh, Sunder Lal Patwa. The architecture of the memorial was composed by architect E.D. Nimgade. Later, On 14 April 2008, the 117th birthday of Ambedkar, inaugurated the memorial.[4] Nearly 4.52 acres of land is connected to the memorial.
    </string>
    <string name="menu_aboutus">About Us</string>
    <string name="haveaccountsignup">Have an account ? Login</string>
    <string name="fathersname">Father\'s Name</string>
    <string name="sendotp_key">ENTER KEY HERE</string>
    <string name="enterphonenumber">Enter your phone number</string>
    <string name="selectcountry">Select country</string>
    <string name="sending_sms">We\'re sending an sms to</string>
    <string name="inprogress">Verification in\nprogress</string>
    <string name="verified">Verification successful</string>
    <string name="failed">Verification failed</string>
    <string name="entercode">Please enter the code you received</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="hi">Hi!</string>
    <string name="proceed">Proceed</string>
    <string name="successful">Successful!</string>
    <string name="text">
        भारत रत्न डॉ.बाबा साहेब आंबेडकर की जन्मस्थली इंदौर जिले के डॉ. आंबेडकर नगर(महू)में है।उनके जन्मदिवस पर चार दिवसीय कार्यक्रम का आयोजन किया जा रहा है।11 अप्रैल से 14 अप्रैल 2020 तक विभिन्न प्रतियोगिताओं और कार्यक्रम का आयोजन पहली बार किया जा रहा है।
    </string>
    <string name="action_notification">Notification</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_notification">Notification</string>
    <string name="chooseeducation">Education Level</string>
    <string name="email">gyanutasav20@gmail.com</string>
    <string-array name="education">
        <item>4th</item>
        <item>5th</item>
        <item>6th</item>
        <item>7th</item>
        <item>8th</item>
        <item>9th</item>
        <item>10th</item>
        <item>12th</item>
        <item>Under Graduate</item>
        <item>Post Graduate</item>
        <item>doctorate</item>
    </string-array>
    <string name="title_activity_program_des_cription">ProgramDesCriptionActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="menu_share">Share</string>
    <string name="aboutus">संविधान निर्माता व भारतर| डॉ. भीमराव आंबेडकर के जन्म दिवस 14 अप्रैल के अवसर पर विभिन्न आयोजन होंगे। ज्ञान उत्सव के रूप में आयोजित इन प्रतियोगिताओं में भाग लेने के लिए कोई एंट्री फीस नहीं लगेगी। विजेताओं को पुरस्कार दिए जाएंगे। डॉ. आंबेडकर जन्म स्थली के प्रशासक तथा अपर कलेक्टर कैलाश वानखेड़े ने बताया बाबा साहब के जन्मदिन पर कला-संस्कृति से जुड़ी प्रतियोगिताएं होंगी। शॉर्ट फिल्म और डाक्यूमेंट्री, पोस्टर, पेंटिंग प्रतियोगिता होगी। पोस्टर प्रतियोगिता का विषय “डॉ. आंबेडकर और सामाजिक लोकतंत्र’ है। इसमें प्रथम पुरस्कार 5 हजार, द्वितीय 3 हजार, तृतीय 2 हजार का दिया जाएगा। अंतिम तिथि 2 अप्रैल है। शॉर्ट फिल्म/डाक्यूमेंट्री प्रतियोगिता का विषय “शिक्षित बनो, संगठित बनो, संघर्ष करो’ है। प्रतियोगिता में प्रथम पुरस्कार 25 हजार, द्वितीय 15 हजार तथा तृतीय 10 हजार रुपए है। अंतिम तिथि 6 अप्रैल है। इसी तरह फोटोग्राफी प्रतियोगिता 11 से 14 अप्रैल तक रहेगी।</string>
    <string name="comingsoon">Coming Soon...</string>
</resources>
