<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_program">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.gyanutsav.gyan.ui.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_aboutus"
        android:name="com.gyanutsav.gyan.ui.fragments.AboutusFragment"
        android:label="@string/menu_aboutus"
        tools:layout="@layout/fragment_aboutus" />

    <fragment
        android:id="@+id/nav_faq"
        android:name="com.gyanutsav.gyan.ui.fragments.FAQFragment"
        android:label="@string/menu_faq"
        tools:layout="@layout/fragment_faq" />

    <fragment
        android:id="@+id/nav_contactus"
        android:name="com.gyanutsav.gyan.ui.fragments.ContactusFragment"
        android:label="@string/menu_contactus"
        tools:layout="@layout/fragment_contactus" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.gyanutsav.gyan.ui.fragments.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_program"
        android:name="com.gyanutsav.gyan.ui.fragments.ProgramFragment"
        android:label="@string/menu_program"
        tools:layout="@layout/fragment_program" />

    <fragment
        android:id="@+id/nav_notification"
        android:name="com.gyanutsav.gyan.ui.fragments.NotificationFragment"
        android:label="@string/menu_notification"
        tools:layout="@layout/fragment_notification" />
</navigation>