<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/topLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_splash"
    android:padding="0dip">


    <LinearLayout
        android:id="@+id/textWrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ImageView
            android:id="@+id/topImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_verify" />


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <LinearLayout
                android:id="@+id/inputContainer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/entercode"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <com.gyanutsav.gyan.ui.otp.OtpEditText
                    android:id="@+id/inputCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/inputbox_new"
                    android:inputType="numberPassword"
                    android:maxLength="4"
                    android:padding="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textIsSelectable="false"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/smsVerificationButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight=".5"
                        android:background="@drawable/rounded_corner"
                        android:gravity="center"
                        android:onClick="onSubmitClicked"
                        android:padding="10dp"
                        android:text="@string/proceed"
                        android:textAllCaps="false"
                        android:textColor="#1A79CC"
                        android:textSize="14sp" />
                </LinearLayout>


                <TextView
                    android:id="@+id/resend_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Resend via call ()"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressIndicator"
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:indeterminate="false"
                android:indeterminateDrawable="@drawable/progress"
                android:indeterminateDuration="3000"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/checkmarkImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true"
                android:background="@drawable/ic_checkmark"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkmarkImage"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/successful"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView1"
                    android:gravity="center"
                    android:text="Your Mobile number has been \nsuccessfully verified."
                    android:textAllCaps="false"
                    android:textColor="#555555"
                    android:textSize="14sp"
                    android:visibility="invisible" />
            </LinearLayout>
        </RelativeLayout>


        <TextView
            android:id="@+id/progressText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="20dp"
            android:text="@string/inprogress"
            android:textAllCaps="false"
            android:textColor="@color/sendotp_light_grey"
            android:textSize="22sp"
            android:visibility="gone" />

    </LinearLayout>

</RelativeLayout>
